--- a/css/styles.css
+++ b/css/styles.css
@@ -75,17 +75,29 @@ aside {
 HEADER
 ************/
 #logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  margin-top: -70px;
+  position: absolute;
+top: -4%;
+left:35%;
+  width: 30%;
+  z-index: 2;
+
+}
+#lionking{
+  margin-top: 10px;
+  position: relative;
+  z-index: 1;
+  height:330px;
+  overflow:hidden;
+  text-align: center;
 }
 
 h3{
-display: flex;
-justify-content: center;
-  margin-top: -100px;
+display: block;
+margin-top: 10px;
+text-align: center;
+padding: 20px;
+background-color: #0542aa;
+border: 1px solid white;
 }
 
 /************
