--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,17 @@ HEADER
   position: relative;
 }
 
-a{
+#home, #casts{
+  color:gold;
+}
+#tickets{
+color:rgba(255, 77, 0, 0.845);
+}
+#theater{
+  color: orange;
+}
+
+a{ 
   text-decoration: none;
   color: white;
 }
@@ -110,7 +120,7 @@ margin-top: 30px;
 text-align: center;
 padding: 20px;
 background-color: #224f71;
-border: 1px solid white;
+border: 2px solid white;
 font-family: 'Open Sans', sans-serif;
 font-size: 20px;
 }
